# lockbox-local

./: .gitignore  LICENSE  README.fr.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: .build.yml  build.yml  winget-publish.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  crypto.rs  db.rs  main.rs
src/components/: AboutModal.tsx  CreateLockboxModal.tsx  DocModal.tsx  EditLockboxModal.tsx  ExtendDelayModal.tsx  Header.tsx  LockboxCard.tsx  LockboxDetail.tsx  LockboxList.tsx  LoginScreen.tsx  PasswordGeneratorModal.tsx  ReflectionModal.tsx  SettingsModal.tsx  Sidebar.tsx  StatsModal.tsx  index.ts
src/components/ui/: Button.tsx  DateTimePicker.tsx  Input.tsx  Modal.tsx  Select.tsx  TagInput.tsx  Tooltip.tsx  index.ts
src/hooks/: index.ts  useCountdown.ts  useEditPermissions.ts  useExportImport.ts  useLockboxStatus.ts
src/i18n/: index.ts  localeStore.ts  translations.ts
src/store/: authStore.ts  index.ts  lockboxStore.ts  settingsStore.ts  themeStore.ts
src/styles/: index.css
src/types/: index.ts  lockbox.ts
src/utils/: notificationSound.ts
